[package]
name = "futures2"

version = "0.1.0"
authors = ["Aaron Turon <aturon@mozilla.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"

[dependencies]
futures = { git = "https://github.com/rust-lang-nursery/futures-rs.git", features = ["nightly"] }
